Tweak app configuration for uber jar creation